--- a/style.css
+++ b/style.css
@@ -1,85 +1,114 @@
-body {
-  font-family: 'Open Sans', sans-serif;
+body{
+  margin: 0px;
 }
 
-main {
-  width: 600px;
-  margin: 0 auto;
-}
-
-.newsletter-form {
-  color: #666666;
-  border: 1px solid #cccccc;
-  padding: 10px;
-  border-radius: 3px;
-  position: relative;
-}
-
-input[type="text"] {
+.header{
   width: 100%;
-  box-sizing: border-box;
-  height: 30px;
-  margin: 0 0 5px;
-}
-
-input[type="submit"] {
-  width: 100%;
-  box-sizing: border-box;
-  background: #3cb878;
-  border: 0;
-  color: white;
-  height: 30px;
-  margin: 0 0 10px;
-  cursor: pointer;
-}
-
-.newsletter-form h2 {
-  margin-top: 0;
-}
-
-a {
-  color: #3CB878;
-}
-
-.exit-button {
-  position: absolute;
-  top: 3px;
-  right: 10px;
-  cursor: pointer;
-}
-
-.question-button {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
-  width: 100px;
-  height: 100px;
-  line-height: 100px;
-  color: white;
-  font-size: 70px;
-  text-align: center;
-  border-radius: 50%;
-  background: #3cb878;
-  z-index: 10;
-  cursor: pointer;
-}
-
-.key-features {
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  position: relative;
+  flex-direction: column;
 }
 
-.feature {
-  background: #3cb878;
-  padding: 30px;
-  margin: 10px 0;
+.header img{
+  width: 100%;
 }
 
-.feature p {
+.header p{
+  font-family: 'Abril Fatface', cursive;
+  color: #222;
+  font-size: 34px;
+  position: absolute;
+  left: 22%;
+  bottom: 0px;
+  line-height: 50px;
+}
+
+p, li{
+  font-family: 'Josefin Sans', sans-serif;
+  color: #222;
+  font-size: 15px;
+  font-weight: 300;
+  list-style-type: square;
+  margin-top: 5px;
+}
+
+.content p{
+  margin-top: 10px;
+  margin-bottom: 30px;
+  line-height: 24px;
+  font-size: 15px;
+}
+
+.intro p, li{
+  font-size: 18px;
+}
+
+blockquote{
+  font-family: 'Abril Fatface', cursive;
   color: white;
-  font-size: 20px;
-  font-weight: bold;
-  margin-bottom: 0;
-  text-align: center;
+  background-color: #444;
+  display: flex;
+  align-items: center;
+  line-height: 70px;
+  font-size: 50px;
+  margin-left: -75px;
+  height: 180px;
+  position: relative;
+  padding-left: 40px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  width: 110%;
+  margin-bottom: 80px;
+}
+
+blockquote::before {
+  content: '“';
+  font-size: 100px;
+  display: block;
+  position: absolute;
+  top: 25px;
+  left: 0px;
+  font-size: 140px;
+}
+
+h2{
+  font-family: 'Josefin Sans';
+  text-transform: uppercase;
+  margin-bottom: 50px;
+}
+
+h3{
+  font-family: 'Josefin Sans';
+  font-size: 23px;
+  margin-bottom: 0px;
+  margin-top: 50px;
+}
+
+h4{
+  font-family: 'Merriweather', italic;
+  font-size: 15px;
+  margin-top: 0px;
+  
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-top: 50px;
+}
+
+.container{
+  width: 700px;
+  margin-left: auto;
+  margin-right: auto;  
+  line-height: 25px;
+}
+
+.line{
+  background-color: black;
+  height: 5px;
+  width: 100%;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
